# Embedded_linux

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  IMPLEMENTATION_NOTES.md  Makefile  README.md  implementation_summary.sh  run-test.sh  signment-3  test_ioctl  test_ioctl.c  test_socket_ioctl.sh
.github/workflows/: documentation.yml  windows.yml
aesd-char-driver/: Makefile  aesd-circular-buffer.c  aesd-circular-buffer.h  aesd-circular-buffer1.c  aesd_ioctl.h  aesdchar.h  main.c
conf/: username.txt
docs/html/: CMakeLists_8txt.html  annotated.html  classes.html  device__manager_2CMakeLists_8txt.html  device__manager_8c.html  device__manager_8c__incl.map  device__manager_8c__incl.md5  device__manager_8h.html  device__manager_8h__dep__incl.map  device__manager_8h__dep__incl.md5  device__manager_8h__incl.map  device__manager_8h__incl.md5  device__manager_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_eae182db256f8c24d19ca8791bee103b.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  structDevice-members.html  structDevice.html  structDeviceManager-members.html  structDeviceManager.html  structDevice__coll__graph.map  (+3 more)
finder-app/: Makefile  finder-test.sh  finder.sh  manual-bbb.sh  manual-linux.sh  manual-rpi.sh  start-qemu-app.sh  start-qemu-terminal.sh  writer  writer.c  writer.sh  writerIm.c
server/: Makefile  README.md  aesdsocket  aesdsocket-start-stop.sh  aesdsocket.c  aesdsocket1.c  socket2.c  valgrind-out.txt
(+85 files in other folders)
